@@ -35,7 +35,7 @@ Here, we interpret it more narrowly focussing on a single format each for dateti
 and dates.  We return datetime object formatted as \sQuote{2016-09-01T10:11:12}
 and date object as \sQuote{2016-09-01}.
 
-If the option \code{anytime.oldISO8601format} is set to \code{TRUE}, then the previous
+If the option \code{anytimeOldISO8601format} is set to \code{TRUE}, then the previous
 format (with a space instead of \sQuote{T} to separate date and time) is used.
 }
 
